--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AppSettings": {
-    "JwtSecret": "pm36LBfGqa838DWaEnW98cdLIht5xhSh",
-    "JwtEmailEncryption": "zE2pDTKajMYeFcADzk19F8PQp4yJl5aD",
+    "JwtSecret": "iFHuygUEH89!3cdskcidH(Q*#qwpo",
+    "JwtEmailEncryption": "qwhueh1893hr*(#*h438hufhqjefn",
     "Issuer": "mcq-api-server",
     "Audience": "mcq-client"
   },
